--- a/src/styles/Question.module.css
+++ b/src/styles/Question.module.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .question {
     display: flex;
-    flex-wrap: wrap;
+    align-self: center;
     font-size: 20px;
     padding-top: 50px;
     padding-bottom: 50px;
