--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,3 +19,13 @@
     list-style: none;
     gap: 30px;
 }
+
+.radio_button {
+    width: 80px;
+    padding: 10px 20px 10px 20px;
+    height: 30px;
+    position: absolute;
+    height: fit-content;
+    margin-left: 20px;
+    margin-top: 20px;
+}
