--- a/src/styles/scoreTable.module.css
+++ b/src/styles/scoreTable.module.css
@@ -16,3 +16,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.Table_container {
+    background: transparent;
+    border: 1px #948181d8 solid;
+    border-radius: 10px;
+    font-size: 15px;
+    margin-bottom: 60px;
+}
+
+.result {
+    display: flex;
+    justify-content: center;
+    padding-top: 140px;
+    padding-bottom: 200px;
+}
