--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -96,6 +96,40 @@
     font-size: 23px;
     text-decoration: none;
     color: black;
+    position: absolute;
+    left: 40px;
+}
+
+.back_button_question {
+    width: 120px;
+    height: 80px;
+    background: transparent;
+    border: 1px #948181d8 solid;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 1);
+    cursor: pointer;
+    font-size: 23px;
+    text-decoration: none;
+    color: black;
+    position: absolute;
+    left: 40px;
+    top: 30px;
+}
+
+.wojak_img {
+    width: 110px;
+    height: auto;
+    position: absolute;
+    top: 340px;
+    left: 250px;
+}
+
+.wojak_img_good {
+    width: 160px;
+    height: auto;
+    position: fixed;
+    right: 250px;
+    top: 320px;
 }
 
 @media (min-width: 350px) and (max-width: 700px) {
@@ -112,8 +146,16 @@
     .back_button {
         height: 39px;
         width: 130px;
+        left: 5px;
+        top: 200px;
     }
     .topic_list {
         gap: 15px;
+    }
+    .back_button_question {
+        height: 39px;
+        width: 130px;
+        left: 5px;
+        top: 10px;
     }
 }
