--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -121,15 +121,44 @@
     height: auto;
     position: absolute;
     top: 340px;
-    left: 250px;
+    left: 340px;
+    animation: pulse 3.0s ease 0s;
 }
 
 .wojak_img_good {
-    width: 160px;
+    width: 150px;
     height: auto;
     position: fixed;
-    right: 250px;
-    top: 320px;
+    right: 300px;
+    top: 350px;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 1
+    }
+}
+
+@media (min-width: 701px) and (max-width: 1200px) {
+    .wojak_img {
+        width: 90px;
+        top: 10px;
+        left: 240px;
+    }
+    .wojak_img_good {
+        width: 120px;
+        top: 20px;
+        right: 230px;
+    }
+    .back_button {
+        top: 40px;
+    }
 }
 
 @media (min-width: 350px) and (max-width: 700px) {
@@ -157,5 +186,17 @@
         width: 130px;
         left: 5px;
         top: 10px;
+    }
+    .wojak_img {
+        width: 90px;
+        height: auto;
+        left: 280px;
+        top: 10px;
+    }
+    .wojak_img_good {
+        width: 120px;
+        height: auto;
+        left: 250px;
+        top: 20px;
     }
 }
