--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,18 +37,21 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
 }
 
 html,
 body {
     max-width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+
 }
 
-body {
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient( to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-}
+
+
+
 
 a {
     color: inherit;
